--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "gulp-uglify": "^3.0.2",
     "imagemin": "^8.0.1",
     "jquery": "^3.6.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
     "gulp-imagemin": "^7.1.0",
     "imagemin-pngquant": "^9.0.2"
   }
-} 
+}
