--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-uglify": "^3.0.2",
     "imagemin": "^8.0.1",
     "jquery": "^3.6.0",
+    "rateyo": "^2.3.2",
     "sass": "^1.53.0",
     "slick-carousel": "^1.8.1"
   },
